labs/3-back/vs-ratings-mysql.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews.back.svc.cluster.local
  exportTo:
  - back
  - front
  gateways:
  - mesh
  http:
  - route:
    - destination:
        host: reviews.back.svc.cluster.local
        subset: v3
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings
  exportTo:
  - back
  - front
  gateways:
  - mesh
  http:
  - route:
    - destination:
        host: ratings
        subset: v2-mysql
      timeout: 4
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
spec:
  hosts:
  - details.back.svc.cluster.local
  exportTo:
  - back
  - front
  gateways:
  - mesh
  http:
  - route:
    - destination:
        host: details.back.svc.cluster.local
        subset: v1
---
